# spbu_tasks_prog

./: .gitignore  README.md
241017_cpp_refactoring/: before_refactoring_atelitsin.cpp  build_run.bat
241029_cpp_many_file/: build_run.bat  main.cpp  print.cpp  print.hpp
241203_cpp_refactroing_2/: build_run.bat  ex1.cpp
241224_travel_menu/: build_run.bat  main.cpp  menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_item.cpp  menu_item.hpp
250329_cmake_gtest/: build_run.bat
250329_cmake_gtest/project/: CMakeLists.txt
250504_vector_list/: build_run.bat
250831_supermario/: build_PDCurses.sh  build_run.sh  build_temp.bat  main.cpp  main_linux.cpp  oop_main.cpp
251213_qt/: CMakeLists.txt  CMakeLists_test.txt  build.sh  build_2.sh  main.cpp
251213_qt/src/: keyboard.hpp  keyboard_button.cpp  keyboard_window.cpp
251219_qt_keyboard_repair/: CMakeLists.txt  build.bat  build.sh  test.cpp
251219_qt_keyboard_repair/src/: key_data.hpp  keyboard.cpp  keyboard.hpp  keyboard_button.cpp  keyboard_button.hpp  keyboard_data.cpp  keyboard_data.hpp  keyboard_window.cpp  keyboard_window.hpp  main.cpp  manual_test.cpp  startup_window.cpp  startup_window.hpp
251220_supermario_v2/: build.sh  build_qt.bat  build_qt.sh
251220_supermario_v2/src/: CMakeLists.txt  qt_main.cpp
251220_supermario_v2/src/levels/: first_level.cpp  second_level.cpp  third_level.cpp
251220_supermario_v2/src/model/: CMakeLists.txt  basic_enemy.cpp  basic_enemy.hpp  ui_factory.hpp
251220_supermario_v2/src/objects/: CMakeLists.txt  enemy.cpp  enemy.hpp  flying_enemy.cpp  flying_enemy.hpp  jumping_enemy.cpp  jumping_enemy.hpp
251220_supermario_v2/src/os_controls/: CMakeLists.txt
251220_supermario_v2/src/os_controls/macos/: CMakeLists.txt  user_input.cpp
251220_supermario_v2/src/os_controls/unix/: CMakeLists.txt  os_control_settings.cpp  user_input.cpp
251220_supermario_v2/src/ui/: CMakeLists.txt
251220_supermario_v2/src/ui/console/: console_ui_factory.cpp  console_ui_factory.hpp
251220_supermario_v2/src/ui/console/ui_objects/: CMakeLists.txt  console_flying_enemy.cpp  console_flying_enemy.hpp  console_jumping_enemy.cpp
251220_supermario_v2/src/ui/qt/: qt_game_map.cpp  qt_game_map.hpp  qt_ui_factory.cpp  qt_ui_factory.hpp  qt_ui_obj.hpp  qt_ui_obj_rect_adapter.cpp  qt_ui_obj_rect_adapter.hpp
251220_supermario_v2/src/ui/qt/ui_objects/: CMakeLists.txt  qt_box.cpp  qt_box.hpp  qt_enemy.cpp  qt_enemy.hpp  qt_flying_enemy.cpp  qt_flying_enemy.hpp  qt_full_box.cpp  qt_full_box.hpp  qt_jumping_enemy.cpp  qt_jumping_enemy.hpp  qt_mario.cpp  qt_mario.hpp  qt_money.cpp  qt_money.hpp  qt_ship.cpp  qt_ship.hpp
(+36 files in other folders)
